Attempted to fix the ability for the user to insert comma's into numbers on mobile
Adjusted the HTML and Javascript to be more clear with input values and adjusted Javascript to fix certain things the user could do

--- a/Mortcalc.css
+++ b/Mortcalc.css
@@ -21,7 +21,7 @@ html {
     display: flex; 
     display: inline-block;
     justify-content: center;
-    block-size: 35em;
+    block-size: 38.5em;
     align-items: center;
     align-content: center;
     background-image: none;
